# RectangularMatrix

./: .gitignore  CMakeLists.txt  Makefile  README.md  complex.c  complex.h  lab  main.c  matrix.c  matrix.h
built/: CMakeCache.txt  Makefile  cmake_install.cmake  lab1_rectangularMatri
inc/: complex.h  complexImpl.h  double.h  doubleImpl.h  errorHandling.h  inputHandling.h  integer.h  integerImpl.h  matrix.h  typeInfo.h  typeInfoComplex.h  typeInfoDouble.h  typeInfoInteger.h
source/: a.out  complex.c  double.c  errorHandling.c  googleTests.cpp  inputHandling.c  integer.c  invalid_matrix.c  main.c  matrix.c  testMatrix.c  typeDetector.c
